// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1732
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6732
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 6227
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19442
entreprise . chiffre d'affaires: 26227
impôt . montant: 558
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 20334
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41324
entreprise . chiffre d'affaires: 70334
impôt . montant: 8676
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"dirigeant . indépendant . cotisations et contributions: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1289
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3289
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1895
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6895
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"dirigeant . indépendant . cotisations et contributions: 3458
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13458
impôt . montant: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"dirigeant . indépendant . cotisations et contributions: 46699
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73568
entreprise . chiffre d'affaires: 146699
impôt . montant: 26432
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"dirigeant . indépendant . cotisations et contributions: 253290
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529302
entreprise . chiffre d'affaires: 1253290
impôt . montant: 470698
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions: 26601
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48130
entreprise . chiffre d'affaires: 86601
impôt . montant: 11870
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions: 20592
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41140
entreprise . chiffre d'affaires: 70592
impôt . montant: 8860
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions: 15803
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33953
entreprise . chiffre d'affaires: 55803
impôt . montant: 6047
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 31353
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48153
entreprise . chiffre d'affaires: 91353
impôt . montant: 11847
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 30404
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48161
entreprise . chiffre d'affaires: 90404
impôt . montant: 11839
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 29965
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48165
entreprise . chiffre d'affaires: 89965
impôt . montant: 11835
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 34362
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48129
entreprise . chiffre d'affaires: 94362
impôt . montant: 11871
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 32152
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48147
entreprise . chiffre d'affaires: 92152
impôt . montant: 11853
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 1899
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2899
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 31353
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 48153
entreprise . chiffre d'affaires: 91353
impôt . montant: 11847
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 6882
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 34515
entreprise . chiffre d'affaires: 46882
impôt . montant: 5485
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 3458
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13458
impôt . montant: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 20334
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41324
entreprise . chiffre d'affaires: 70334
impôt . montant: 8676
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 46699
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73568
entreprise . chiffre d'affaires: 146699
impôt . montant: 26432
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 985
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
entreprise . chiffre d'affaires: 1485
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1086
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2086
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1187
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
entreprise . chiffre d'affaires: 2687
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 1289
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3289
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 1895
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6895
impôt . montant: 0
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 3458
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13458
impôt . montant: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 46699
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73568
entreprise . chiffre d'affaires: 146699
impôt . montant: 26432
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 253290
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 529302
entreprise . chiffre d'affaires: 1253290
impôt . montant: 470698
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 8760
dirigeant . rémunération . net: 21240
dirigeant . rémunération . net . après impôt: 20467
entreprise . chiffre d'affaires: 30000
impôt . montant: 773
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 8790
dirigeant . rémunération . net: 21210
dirigeant . rémunération . net . après impôt: 20442
entreprise . chiffre d'affaires: 30000
impôt . montant: 768
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 62300
dirigeant . rémunération . net: 237700
dirigeant . rémunération . net . après impôt: 150550
entreprise . chiffre d'affaires: 300000
impôt . montant: 87150
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12011
dirigeant . rémunération . net: 37989
dirigeant . rémunération . net . après impôt: 33082
entreprise . chiffre d'affaires: 50000
impôt . montant: 4907
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 12011
dirigeant . rémunération . net: 37989
dirigeant . rémunération . net . après impôt: 33082
entreprise . chiffre d'affaires: 50000
impôt . montant: 4907
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 4658
dirigeant . rémunération . net: 15342
dirigeant . rémunération . net . après impôt: 15342
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 15164
dirigeant . rémunération . net: 34836
dirigeant . rémunération . net . après impôt: 30875
entreprise . chiffre d'affaires: 50000
impôt . montant: 3961
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 14578
dirigeant . rémunération . net: 35422
dirigeant . rémunération . net . après impôt: 31287
entreprise . chiffre d'affaires: 50000
impôt . montant: 4135
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 19968
dirigeant . rémunération . net: 30032
dirigeant . rémunération . net . après impôt: 27513
entreprise . chiffre d'affaires: 50000
impôt . montant: 2519
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 89119
dirigeant . rémunération . net: 210881
dirigeant . rémunération . net . après impôt: 135800
entreprise . chiffre d'affaires: 300000
impôt . montant: 75081
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 109031
dirigeant . rémunération . net: 290969
dirigeant . rémunération . net . après impôt: 177071
entreprise . chiffre d'affaires: 400000
impôt . montant: 113898
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 35113
dirigeant . rémunération . net: 84887
dirigeant . rémunération . net . après impôt: 64948
entreprise . chiffre d'affaires: 120000
impôt . montant: 19939
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 14578
dirigeant . rémunération . net: 35422
dirigeant . rémunération . net . après impôt: 31287
entreprise . chiffre d'affaires: 50000
impôt . montant: 4135
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12440
dirigeant . rémunération . net: 37560
dirigeant . rémunération . net . après impôt: 32782
entreprise . chiffre d'affaires: 50000
impôt . montant: 4778
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 5366
dirigeant . rémunération . net: 14634
dirigeant . rémunération . net . après impôt: 14634
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1651
dirigeant . rémunération . net: 2349
dirigeant . rémunération . net . après impôt: 2349
entreprise . chiffre d'affaires: 4000
impôt . montant: 0
protection sociale . retraite . trimestres: 3

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 5366
dirigeant . rémunération . net: 14634
dirigeant . rémunération . net . après impôt: 14634
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 5366
dirigeant . rémunération . net: 14634
dirigeant . rémunération . net . après impôt: 14634
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 5366
dirigeant . rémunération . net: 14634
dirigeant . rémunération . net . après impôt: 14634
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;
